force-app/main/default/objects/BIS_Project_Import_Config__c/BIS_Project_Import_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BIS Project Import Config</label>
</CustomObject>