force-app/main/default/objects/BIS_Project_Import_Config__c/fields/BIS_Import_Username__c.field-meta.xml
<CustomField>
    <fullName>BIS_Import_Username__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1261. Used for Project Before Update Flow, to identify if changes have been done by Import User.</description>
    <label>BIS Import Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>