force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Deletion_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Batch_Size__c</fullName>
    <label>Deletion Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>