force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Deletion_Ibau_Month_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Ibau_Month_Limit__c</fullName>
    <label>Deletion Ibau Month Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>