force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Deletion_Infobau_Month_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Infobau_Month_Limit__c</fullName>
    <label>Deletion Infobau Month Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>