force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Error_Emails__c.field-meta.xml
<CustomField>
    <fullName>Error_Emails__c</fullName>
    <description>Comma separated list of email addresses to sent out error notifications.</description>
    <inlineHelpText>Comma separated list of email addresses to sent out error notifications.</inlineHelpText>
    <label>Error Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>