force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Filter_JSON_Ibau_AT__c.field-meta.xml
<CustomField>
    <fullName>Filter_JSON_Ibau_AT__c</fullName>
    <description>Optional project request parameter to filter for specific projects.
Example: {&quot;project$$attributes$$town&quot;: &quot;Leipzig&quot;}</description>
    <inlineHelpText>Optional project request parameter to filter for specific projects.
Example: {&quot;project$$attributes$$town&quot;: &quot;Leipzig&quot;}</inlineHelpText>
    <label>Filter JSON Ibau AT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>