force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Include_Involved_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Include_Involved_Accounts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field used in Apex class BISProjectImport to either include the handling of involved Accounts to create matching Account Leads, Project Account Relations and Project Account Lead Relations or not.</description>
    <label>Include Involved Accounts</label>
    <type>Checkbox</type>
</CustomField>