force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Last_Import_Ibau_AT__c.field-meta.xml
<CustomField>
    <fullName>Last_Import_Ibau_AT__c</fullName>
    <description>Timestamp (in milliseconds) of the last import of Ibau AT projects. This value is set by Apex logic.</description>
    <inlineHelpText>Timestamp (in milliseconds) of the last import of Ibau AT projects. This value is set by Apex logic.</inlineHelpText>
    <label>Last Import Ibau AT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>