force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <description>The number of projects to be requested per page (max: 250)</description>
    <inlineHelpText>The number of projects to be requested per page (max: 250)</inlineHelpText>
    <label>Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>