force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Project_Construction_Start_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Project_Construction_Start_Placeholder__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-1345 Projekt ohne Baubeginn kann nicht mit Potenzial versehen werden</description>
    <inlineHelpText>Enter a placeholder that will be used for projects with neither a start and submission date</inlineHelpText>
    <label>Project Construction Start Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>