force-app/main/default/objects/BIS_Project_Import_Config__c/fields/Retry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Retry_Limit__c</fullName>
    <description>The max number of request retry attempts (default: 3).</description>
    <inlineHelpText>The max number of request retry attempts (default: 3).</inlineHelpText>
    <label>Retry Limit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>